@@ -1008,6 +1008,11 @@ std::string get_wml_location(const std::string &filename, const std::string &cur
 		return result;
 	}
 
+	if (ends_with(filename, ".pbl")) {
+		ERR_FS << "Illegal path '" << filename << "' (.pbl files are not allowed)." << std::endl;
+		return result;
+	}
+
 	bool already_found = false;
 
 	if (filename[0] == '~')
